--- a/main.html
+++ b/main.html
@@ -144,6 +144,7 @@ $(function() {
     <h2>おみくじ</h2>
     <button id="button">引く</button><br>
     <input type="hidden" id="test1" name="text1" size="5" value=""><br>
+    <div id="result"></div>
     <br />
     <canvas id="canvas" width="100" height="100" ></canvas>
     <br />
