スマフォ画面対応

--- a/main.html
+++ b/main.html
@@ -140,6 +140,7 @@ $(function() {
 });
 </script>
 </head>
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
 <body>
     <h2>おみくじ</h2>
     <button id="button">引く</button><br>
