--- a/main.html
+++ b/main.html
@@ -145,7 +145,7 @@ $(function() {
     <h2>おみくじ</h2>
     <button id="button">引く</button><br>
     <input type="hidden" id="test1" name="text1" size="5" value=""><br>
-    <div style="color:blue;font-size: 50px;" id="result"></div>
+    <div style="background-color:rgb(238, 255, 0)  ;color:blue;font-size: 50px;" id="result"></div>
     <br />
     <canvas id="canvas" width="100" height="100" ></canvas>
     <br />
