change  input_out

--- a/input_out.html
+++ b/input_out.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 
-  <input id="text0" type="text" size="50" value="" />
+  <input id="text0" type="text" size="80" value="ダイエットが効果を表します" />
   <input type="button" value="送信" onclick="inData0()" /><br>
   <div id="outdata0"></div>
-  <input id="text1" type="text" size="50" value="" />
+  <input id="text1" type="text" size="80" value="44OA44Kk44Ko44OD44OI44GM5Yq55p6c44KS6KGo44GX44G+44GZ" />
   <input type="button" value="送信" onclick="inData1()" />
   <div id="outdata1"></div>
   
