--- a/main_jpg2.html
+++ b/main_jpg2.html
@@ -16,8 +16,8 @@ function drawImage3(imageFile) {
     //画像ロード後に画像を描画できる。
     img1.onload = function(){
         //画像の大きさを設定
-        width  = img1.width/4;
-        height = img1.height/4;
+        width  = img1.width/6;
+        height = img1.height/6;
         canvas.attr('width' , width);
         canvas.attr('height', height);
         //画像を描画
@@ -161,8 +161,12 @@ $("#button2").click(function(event){
     <input type="hidden" id="test1" name="text1" size="5" value=""><br>
     <div style="background-color:rgb(238, 255, 0)  ;color:blue;font-size: 50px;" id="result"></div>
     <br />
-    <canvas id="canvas" width="100" height="100" ></canvas>
-    <canvas id="canvas2" width="100" height="100" ></canvas>
+    <div>
+        <canvas id="canvas" width="100" height="100" ></canvas>
+    </div>
+    <div>
+        <canvas id="canvas2" width="100" height="100" ></canvas>
+    </div>
     <br />
 </body>
 </html>
