--- a/main_jpg2.html
+++ b/main_jpg2.html
@@ -21,7 +21,7 @@ function drawImage3(imageFile) {
         canvas.attr('width' , width);
         canvas.attr('height', height);
         //画像を描画
-        ctx.drawImage(img1, 0, 0, width, height);
+        ctx.drawImage(img1, 0,0,230,240);
     }
     return false;
 }
@@ -42,7 +42,7 @@ function drawImage2(imageFile) {
         canvas.attr('width' , width);
         canvas.attr('height', height);
         //画像を描画
-        ctx.drawImage(img1, 0, 0, width, height);
+        ctx.drawImage(img1, 0, 0, 230, 240);
     }
     return false;
 }
