--- a/main_jpg.html
+++ b/main_jpg.html
@@ -73,7 +73,7 @@ $(function() {
     function get_text() {
         $.ajax({
         type: "POST"
-        , url:  "./imagedown3.php"
+        , url:  "./jpgdown.php"
         , data: ""
         }).done(function(res){
             // ajaxがOK
