--- a/jump_test.html
+++ b/jump_test.html
@@ -8,8 +8,9 @@
 
  
     <h1>ジャンプ</h1>
-
+    <div id="top"></div>
     <p>
+
       <img  src="./jpg/0.jpg" width="30"></a>
       <a href="#link0">画像0へジャンプ</a>
       <img  src="./jpg/1.jpg" width="30"></a>
@@ -40,6 +41,7 @@
      <p> aaaaaaaa</p>
      <p> aaaaaaaa</p>
      <img id="link0"  src="./jpg/0.jpg" width="300"></a>
+     <a href="#top">先頭</a>
      <p> aaaaaaaa</p>
      <p> aaaaaaaa</p>
      <p> aaaaaaaa</p>
@@ -60,14 +62,9 @@
      <p> aaaaaaaa</p>
      <p> aaaaaaaa</p>
      <p> aaaaaaaa</p>
-
-    <p>
-
-
       <img id="link1"  src="./jpg/1.jpg" width="300"></a>
-    </p>
-
-     <p> aaaaaaaa</p>
+      <a href="#top">先頭</a>
+      <p> aaaaaaaa</p>
      <p> aaaaaaaa</p>
      <p> aaaaaaaa</p>
      <p> aaaaaaaa</p>
