--- a/preview.html
+++ b/preview.html
@@ -19,6 +19,7 @@ function preview(obj){
     for (i = 0; i < obj.files.length; i++) {
         var fileReader = new FileReader();
         fileReader.onload = (function (e) {
+            console.log(e.target.result);
             document.getElementById('preview').innerHTML += '<img src="' + e.target.result + '"width=100px>';
         });
         fileReader.readAsDataURL(obj.files[i]);
