--- a/auto_change.html
+++ b/auto_change.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="refresh" content="3; URL=http://snc29654.php.xdomain.jp/omikuji/test1.html">
+  <meta http-equiv="refresh" content="3; URL=http://snc29654.php.xdomain.jp/omikuji/auto_change.html">
   <title>Sample</title>
 </head>
 <body>
-  <img src="https://picsum.photos/640/480">
+  <img src="https://picsum.photos/640/480"><br>
   ３秒後に変化します。
 </body>
 </html>
