--- a/make_memo_date.html
+++ b/make_memo_date.html
@@ -5,13 +5,12 @@
     </head>
     <body>
         <h1>localStorageの日記</h1>
-        <input type="date" id="date0" value="" ><br>
+        <input type="date" id="date0" value="" onchange="load()"><br>
 
-        <input type="button" value="書き込み" onclick="save()" >
-        日記書き込み<input id="text1" type="text" value="1234"><br>
+        <input type="button" value="書き込み" onclick="save()" ><br>
+        <textarea name="example2" id="text1"  value=""  cols="50" rows="10"></textarea>
+
             
-            <input type="button" value="読み出し" onclick="load()" >
-        日記読み出し<input id="text2" type="text" value="....">
             <script type="text/javascript">
                 function load() {
                     var keyData = document.getElementById('date0').value;
@@ -21,7 +20,7 @@
                     } else {
                         storageData = localStorage.getItem(keyData);
                     }
-                    document.getElementById('text2').value=storageData;
+                    document.getElementById('text1').value=storageData;
                 }
                 function save() {
                     var keyData = document.getElementById('date0').value;
